src/main.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Sevillana&display=swap');

* {
    font-family: "Montserrat", sans-serif;
}

#webpage {
    background-color: #181818;
}

#main-title {
    color: #E9EAE2;
    padding: 0;
    margin: 0;
}

#navbar-bg {
    background-color: transparent !important;
}

#navLink {
    color: #7B7A6F;
    font-weight: 700;
    letter-spacing: 0.5px;
    border: 1px solid transparent;
    border-radius: 3px;
}

#navLink:hover {
    transition: 0.2s;
    color: #E3E0D3;
    background-color: #1E1E1E;
    border: 2px solid #e3e0d37a;
}

#navLink.active {
    font-weight: 700;
    border: 2px solid #e3e0d37a;
    color: #E3E0D3;
    background-color: #1E1E1E;
}

#homeContainer {
}

#homeRow {
    min-height: 90vh;
}

#leftColumn {
    color: #E9EAE2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#profileName {
    display: flex;
    align-items: center;
    color: #E3E0D3;
}

#profilePicture {
    width: 100%;
    border-radius: 35px;
}

#columnBox {
    padding: 30px;
    height: 100%;
    border-radius: 25px;
}

#socialIcons {
    width: 20%;
    margin-right: 3px;
}

#socialIcons:hover {
    filter: brightness(200%);
}

#cvBtn {
    background-color: transparent;
    border: 3px solid #CCCABD;
    padding: 10px;
    font-size: 20px;
    font-weight: 700;
    letter-spacing: 1px;
    color: #CCCABD;
    margin-top: 10px;
}

#cvBtn:hover {
    filter: brightness(200%);
    background-color: #1E1E1E;
    transition: 0.2s;
}

.footer {
    background-color: transparent;
    color: white;
    margin: 0;
    padding: 10px;
    font-size: 12px;
}

